--- a/index.html
+++ b/index.html
@@ -2162,7 +2162,7 @@
                      <div class="invest-card invest-cta">
                         <h3>Request a Pitch Deck</h3>
                         <p>Contact our investment team for our investor deck and data room access.</p>
-                        <a href="mailto:invest@rayyanresources.com" class="btn btn-primary btn-investor">
+                        <a href="mailto:invest@rayyanresources.com" class="btn btn-primary btn-investor" style="margin-top: 1.5rem;">
                             <span>Contact Investor Relations</span>
                             <i class="fas fa-arrow-right"></i>
                         </a>
